# rex

./: .gitignore  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MVP_SPEC.md  Makefile  README.md  REFACTOR_PROPOSALS.md  ROADMAP.md  TEMP_TASK_HANDOFF.md  cliff.toml  config.yaml.example  cursor-permissions.rex-ui-harness.json.example  cursor-permissions.tui-probe.json.example  dist-workspace.toml  llms.txt  pyproject.toml  release-please-config.json  release-plz.toml  rex-ui-harness.toml.example  setup.sh  start-rex.sh  tuiwright.toml.example
.cargo/: audit.toml
.github/: auto-approve.json  ci-path-filters.yaml  dependabot.yml  pull_request_template.md
.rex-ui-harness/: .gitignore
app/: cli.py  config.py  main.py  utils.py
crates/rex/: Cargo.toml
crates/rex-capability-mock/: Cargo.toml
crates/rex-capability-mock/src/: lib.rs  main.rs
crates/rex-cli/: Cargo.toml
crates/rex-cli/assets/proto/src/: rex.sidecar.v1.sidecar.proto  rex.v1.rex.proto
crates/rex-cli/src/: command.rs  daemon_lifecycle.rs  domain.rs  error.rs  harness_session.rs  lib.rs  lock_util.rs  main.rs  probe_context.rs  runtime.rs  session_meta.rs  session_resume.rs  stream_render.rs  toolchain.rs  transport.rs
crates/rex-cli/src/tui/: app.rs  approval.rs  history_fetch.rs  mod.rs  motion.rs  session_picker.rs  state.rs  stream_task.rs  theme.rs  ui.rs  viewport.rs
crates/rex-cli/src/tui/compositor/: braille.rs  clock.rs  dirty.rs  effects.rs  frame_budget.rs  hsl.rs  mod.rs  spring.rs
crates/rex-cli/tests/: daemon_autostart.rs  multi_workspace_daemon.rs  ndjson_contract_conformance.rs  parallel_daemon_ensure.rs  session_resume.rs
crates/rex-config/: Cargo.toml
crates/rex-config/src/: error.rs  gateway.rs  gateway_layout.rs  layout.rs  lib.rs  merge.rs  model.rs  observability.rs  omlx.rs  omlx_layout.rs  openai_compat.rs  paths.rs  project.rs  sidecar_binary.rs  sockets.rs  workspace.rs
crates/rex-daemon/: Cargo.toml
crates/rex-daemon/src/: access_policy.rs  activity.rs  adapters.rs  advisory_intent.rs  approvals.rs  broker.rs  broker_inference.rs  capability_client.rs  doc_manifest.rs  domain.rs  economics_record.rs  gateway_supervisor.rs  http_openai_compat.rs  knowledge.rs  l1_cache.rs  lib.rs  main.rs  observability.rs  ollama_capability.rs  omlx_supervisor.rs  otlp_metrics.rs  plugins.rs  policy.rs  routing.rs  runtime.rs  service.rs  session_store.rs  session_title.rs  settings.rs  sidecar_client.rs  sidecar_config.rs  sidecar_observability.rs  supervisor.rs  tool_approval.rs  turn_correlation.rs
crates/rex-daemon/tests/: agent_scaffold_smoke.rs  broker_native_tools.rs  capability_fleet_smoke.rs  gateway_managed_smoke.rs  mvp_product_path.rs  obs_store_e2e.rs  omlx_managed_smoke.rs  sidecar_roundtrip.rs  stub_sidecar_smoke.rs  uds_e2e.rs
crates/rex-daemon/tests/support/: config.rs  mod.rs  openai_compat_sse.rs
crates/rex-desktop/: Cargo.toml  tauri.conf.json
crates/rex-desktop/capabilities/: default.json
crates/rex-desktop/permissions/: rex-ipc.toml
crates/rex-desktop/src/: control.rs  lib.rs  main.rs  stream.rs
crates/rex-obs-api/: Cargo.toml
crates/rex-obs-api/src/: error.rs  lib.rs  server.rs
crates/rex-obs-api/tests/: stream_cursor_merge.rs
crates/rex-obs-store/: Cargo.toml
crates/rex-obs-store/src/: chce.rs  dispatch.rs  error.rs  lib.rs  otel.rs  port.rs  query.rs  record.rs  rollup.rs  schema.rs  sqlite.rs  store.rs  tail.rs
crates/rex-obs-store/src/chce/: dict.rs  mod.rs  page.rs  ring.rs  tests.rs
crates/rex-sidecar-stub/: Cargo.toml
crates/rex-sidecar-stub/src/: lib.rs  main.rs
crates/rex-stream-ui/: Cargo.toml
crates/rex-stream-ui/src/: consumer.rs  event.rs  grpc.rs  lib.rs  messaging.rs  truncate.rs  turn_state.rs
crates/rex-stream-ui/tests/: fixtures_conformance.rs
crates/rex/src/: command.rs  config_cmd.rs  desktop_launch.rs  gateway_cmd.rs  main.rs  obs_cmd.rs  omlx_cmd.rs  proto_cmd.rs  sidecar_cmd.rs
crates/rex/tests/: omlx_autostart.rs
docs/: ADAPTERS.md  AGENTS.md  AGENT_ACCESS_POLICY.md  AGENT_DELIVERY_ROADMAP.md  AGENT_GRAPH_ARCHITECTURE.md  AGENT_KNOWLEDGE.md  AGENT_RUNTIME_ENVIRONMENT.md  ARCHITECTURE.md  ARCHITECTURE_GUIDELINES.md  CACHING.md  CAPABILITY_SIDECARS.md  CHCE_ROADMAP.md  CI.md  CI_QUALITY_GATES.md  CLI_OPERATOR_UX.md  CONFIGURATION.md  CONFIGURATION_OPERATOR.md  CONTEXT_EFFICIENCY.md  DEPENDENCIES.md  DEVELOPER_EXPERIENCE_GUIDE.md  DEVELOPMENT_ASSISTANCE_CAPABILITIES.md  DOCUMENTATION.md  ECONOMICS_VALIDATION.md  ERROR_HANDLING.md  EXTENSION.md  EXTENSION_ARCHITECTURE.md  EXTENSION_LOCAL_E2E.md  EXTENSION_MVP.md  EXTENSION_RELEASE.md  EXTENSION_ROADMAP.md  EXTENSION_UX.md  INFERENCE_GATEWAY.md  KISS_CONFIG_SURFACE.md  LANGFUSE_DISCOVERY_ROADMAP.md  LANGFUSE_INTEGRATION.md  LONG_TERM_MEMORY.md  MVP_SPEC.md  (+32 more)
sidecars/capability-mock/: capability-mock  pyproject.toml
sidecars/capability-mock/src/capability_mock/: __init__.py  __main__.py  server.py
sidecars/rex-agent/: .gitignore  DESIGN.md  README.md  pyproject.toml  rex-agent
sidecars/rex-agent/rex_agent/: __main__.py  broker_client.py  config.py  modes.py  server.py
sidecars/rex-agent/rex_agent/graphs/: router.py
sidecars/rex-agent/rex_agent/llm/: rex_broker_chat.py
sidecars/rex-agent/rex_agent/tools/: broker_tools.py
sidecars/rex-agent/src/rex_agent/: __init__.py  __main__.py  advisory_intent.py  broker.py  broker_chat_model.py  config.py  diff.py  graph.py  llm.py  metrics.py  server.py  stream_events.py  streaming.py  tools.py
sidecars/rex-agent/src/rex_agent/graph/: __init__.py  checkpoints.py  compaction.py  state.py  stream_queue.py  stream_sink.py
sidecars/rex-agent/src/rex_agent/graph/nodes/: init.py  llm.py  orchestrator.py  tools.py
sidecars/rex-agent/tests/: test_advisory_intent.py  test_agent_features.py  test_ask_research.py  test_broker.py  test_broker_chat_model.py  test_config.py  test_golden_prompts.py  test_graph.py  test_injected_files.py  test_server.py  test_soft_cap.py  test_stream_events.py  test_streaming.py  test_tool_routing.py  test_tools.py
(+503 files in other folders)
