[workspace]
members = [
  "crates/rex-proto",
  "crates/rex-daemon",
  "crates/rex-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
