[workspace]
members = [
  "crates/rex-proto",
  "crates/rex-config",
  "crates/rex-daemon",
  "crates/rex-cli",
  "crates/rex",
  "crates/rex-sidecar-stub",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.0"
license = "MIT"
repository = "https://github.com/thsfranca/rex"

[workspace.dependencies]
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry_sdk = { version = "0.32", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["metrics", "grpc-tonic", "http-proto"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
