[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rex"
version = "0.1.0"
description = "OpenAI-compatible proxy that routes requests to the cheapest available model"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
rex = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
