[package]
name = "rex-capability-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[lib]
name = "rex_capability_mock"
path = "src/lib.rs"

[[bin]]
name = "rex-capability-mock"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
tonic.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
rex-proto = { path = "../rex-proto" }
