[package]
name = "rex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
rex-config = { path = "../rex-config" }
rex-proto = { path = "../rex-proto" }
thiserror = "2"
serde_json = "1"
