[package]
name = "rex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
rex-config = { path = "../rex-config" }
rex-proto = { path = "../rex-proto" }
rex-stream-ui = { path = "../rex-stream-ui", features = ["grpc"] }
mdstream = { version = "0.2", features = ["pulldown"] }
ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
rex-config = { path = "../rex-config" }
serial_test = "3"
tempfile = "3"
tokio.workspace = true
