[package]
name = "rex-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "net", "process", "signal", "time"] }
tonic.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
lru = "0.18"
rex-config = { path = "../rex-config" }
rex-obs-store = { path = "../rex-obs-store" }
rex-proto = { path = "../rex-proto" }
thiserror = "2"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"

[dev-dependencies]
futures = "0.3"
rex-sidecar-stub = { path = "../rex-sidecar-stub" }
serde_json = "1"
serial_test = "3"
tempfile = "3"
