[package]
name = "rex-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "net", "process", "signal", "time"] }
tonic.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
lru = "0.18"
rex-config = { path = "../rex-config" }
rex-proto = { path = "../rex-proto" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

[dev-dependencies]
futures = "0.3"
rex-sidecar-stub = { path = "../rex-sidecar-stub" }
rex-capability-mock = { path = "../rex-capability-mock" }
serde_json = "1"
serial_test = "3"
tempfile = "3"
