[package]
name = "rex-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "rex-desktop"
path = "src/main.rs"

[lib]
name = "rex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
e2e-testing = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic.workspace = true
rex-cli = { path = "../rex-cli" }
rex-proto = { path = "../rex-proto" }
rex-stream-ui = { path = "../rex-stream-ui", features = ["grpc"] }
thiserror = "2"
tauri-plugin-playwright = "0.4"

[package.metadata.tauri.bundle]
active = true
