[package]
name = "rex-obs-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1"] }
rex-config = { path = "../rex-config" }
rex-obs-store = { path = "../rex-obs-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread"] }

[dev-dependencies]
rex-obs-store = { path = "../rex-obs-store" }
tempfile = "3"
