[package]
name = "rex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[dependencies]
rex-config = { path = "../rex-config" }
rex-cli = { path = "../rex-cli" }
rex-daemon = { path = "../rex-daemon" }
serde_json = "1"
tempfile = "3"
tokio.workspace = true
