[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rex-capability-mock"
version = "0.1.0"
description = "REX capability sidecar mock (Health-only; CI)"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60",
  "protobuf>=4.25",
]

[project.scripts]
rex-capability-mock = "capability_mock.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
