[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rex-agent"
version = "0.1.0"
description = "REX product development agent sidecar (LangGraph ReAct)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60",
  "protobuf>=4.25",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "grpcio-tools>=1.60",
  "ruff>=0.8",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[project.scripts]
rex-agent = "rex_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
